<resources>
    <string name="app_name">Code 005</string>
    <string name="filter_view_http_profile">View Http Profile</string>
    <string name="filter_view_profile">View Profile</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="sign_out">Sign Out</string>
    <string name="widgets">Widgets</string>
    <string name="connections">Connections</string>
    <string name="camera">Camera</string>
    <string name="account">Account</string>
    <string name="back">back</string>
    <string name="photo_user">photo user</string>
    <string name="profile_not_found">profile not found</string>
    <string name="connect">connect</string>
    <string name="connected">connected</string>
    <string name="share">Share</string>
    <string name="preview_background_text_username" translatable="false">.@username@username@username@username@username@username@username@username@username@username@username@username@username@username@username@username@username@username@username@username@username@username@username@username@username@username@username@username@username@username@username@username@username@username@username@username@username@username@username@username@username@username@username@username@username@username@username@username@username@username</string>

    <string name="capture_button_alt">Capture</string>
    <string name="switch_camera_button_alt">Switch camera</string>
    <string name="gallery_button_alt">Gallery</string>
    <string name="back_button_alt">Back</string>
    <string name="share_button_alt">Share</string>
    <string name="share_hint">Share using</string>
    <string name="capture_mode_camera">Camera</string>
    <string name="capture_mode_hdr">HDR</string>
    <string name="capture_mode_night">Night</string>
    <string name="delete_button_alt">Delete</string>
    <string name="delete_dialog">Delete current photo?</string>
    <string name="delete_title">Confirm</string>
    <string name="flip_camera">Flip camera</string>
    <string name="preview_alt">Preview</string>
    <string name="flash_alt">Flash</string>
    <string name="save_preview_alt">Save preview</string>
    <string name="close_preview_alt">Close preview</string>
</resources>